--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
   <string name="app_name">Lesson</string>
+  <string name="hint_speed">請輸入球速</string>
+  <string name="convert">轉換</string>
+  <string name="plz">請輸入數字</string>
 </resources>
