--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
   <string name="app_name">Lesson</string>
+  <string name="account">請輸入帳號</string>
+  <string name="passcode">請輸入密碼</string>
+  <string name="clear">清除</string>
+  <string name="enter">登入</string>
 </resources>
