--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
   <string name="passcode">請輸入密碼</string>
   <string name="clear">清除</string>
   <string name="enter">登入</string>
+  <string name="login_success">成功</string>
+
 </resources>
