--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,7 @@
 <resources>
   <string name="app_name">臭彈是一隻狗</string>
-  <string name="account">請輸入帳號</string>
-  <string name="passcode">請輸入密碼</string>
-  <string name="clear">清除</string>
-  <string name="enter">登入</string>
-  <string name="login_success">成功</string>
+  <string name="switch_checked">checked</string>
+  <string name="switch_not_checked">not checked</string>
+
 
 </resources>
