--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,8 @@
   <string name="clear">清除</string>
   <string name="enter">登入</string>
   <string name="login_success">成功</string>
+  <string name="_1">1</string>
+  <string name="plus">plus</string>
+  <string name="minus">minus</string>
 
 </resources>
