--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,35 +6,15 @@
   <string name="enter">登入</string>
   <string name="login_success">成功</string>
 
-  <string name="flower1_name">Rose</string>
-  <string name="flower2_name">Freesia</string>
-  <string name="flower3_name">Lily</string>
-  <string name="flower4_name">Sunflower</string>
-  <string name="flower5_name">Peony</string>
-  <string name="flower6_name">Daisy</string>
-  <string name="flower7_name">Lilac</string>
-  <string name="flower8_name">Marigold</string>
-  <string name="flower9_name">Poppy</string>
-  <string name="flower10_name">Daffodil</string>
-  <string name="flower11_name">Dahlia</string>
-  <string name="flower12_name">Tulip</string>
-
-  <string name="flower1_description">Rose comes from the Latin word Rosa. There are over 100
-        species of the rose. </string>
-  <string name="flower2_description">Freesias bloom during spring and are native to
-        Africa.</string>
-  <string name="flower3_description">Lilies have the longest in vase lifespan of any cut
-        bloom.</string>
-  <string name="flower4_description">Mature Sunflowers face east and are native too the United
-        States.</string>
-  <string name="flower5_description">Peony plants can live to be 100 years old.</string>
-  <string name="flower6_description">Daisies are cousins with Sunflowers.</string>
-  <string name="flower7_description">Lilacs belong to the olive family.</string>
-  <string name="flower8_description">Marigolds come in orange, reed, maroon and yellow.</string>
-  <string name="flower9_description">Poppies can be over 3 feet tall.</string>
-  <string name="flower10_description">Daffodils are referred to as Lent Lilies in England</string>
-  <string name="flower11_description">Dahlia is named after the Swedish botanist Anders
-        Dahl</string>
-  <string name="flower12_description">There are over 150 species of tulips.</string>
+  <string name="affirmation1">I am strong.</string>
+  <string name="affirmation2">I believe in myself.</string>
+  <string name="affirmation3">Each day is a new opportunity to grow and be a better version of myself.</string>
+  <string name="affirmation4">Every challenge in my life is an opportunity to learn from.</string>
+  <string name="affirmation5">I have so much to be grateful for.</string>
+  <string name="affirmation6">Good things are always coming into my life.</string>
+  <string name="affirmation7">New opportunities await me at every turn.</string>
+  <string name="affirmation8">I have the courage to follow my heart.</string>
+  <string name="affirmation9">Things will unfold at precisely the right time.</string>
+  <string name="affirmation10">I will be present in all the moments that this day brings.</string>
 
 </resources>
