--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,13 @@
 <resources>
   <string name="app_name">臭彈是一隻狗</string>
-  <string name="account">請輸入帳號</string>
-  <string name="passcode">請輸入密碼</string>
-  <string name="clear">清除</string>
-  <string name="enter">登入</string>
-  <string name="login_success">成功</string>
-
+  <string name="skip">Skip</string>
+  <string name="play_again">Play Again</string>
+  <string name="you_scored">You Scored</string>
+  <string name="title_text">guess the word!</string>
+  <string name="play_button">Play</string>
+  <string name="get_ready">Get ready to</string>
+  <string name="got_it">Got it</string>
+  <string name="word_is">The word is…</string>
+  <string name="quote_format">\"%s\"</string>
+  <string name="score_format">Current Score: %d</string>
 </resources>
