--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,7 @@
   <string name="yesterday">YESTERDAY</string>
   <string name="weekly">WEEKLY</string>
   <string name="monthly">MONTHLY</string>
+  <string name="online">在線上</string>
+  <string name="offline">不在線上</string>
 
 </resources>
