--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
   <string name="enter">登入</string>
   <string name="login_success">成功</string>
   <string name="_1">1</string>
-  <string name="plus">plus</string>
-  <string name="minus">minus</string>
+  <string name="next">next</string>
+  <string name="last">last</string>
 
 </resources>
