CHG coil to glide , invisible bottom nav on profileFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
   <string name="yesterday">YESTERDAY</string>
   <string name="weekly">WEEKLY</string>
   <string name="monthly">MONTHLY</string>
+  <string name="profile">個人資訊</string>
   <string name="online">在線上</string>
   <string name="offline">不在線上</string>
 
