--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-  <string name="app_name">臭彈是一隻狗</string>
+  <string name="app_name">甄嬛傳台詞照</string>
   <string name="account">請輸入帳號</string>
   <string name="passcode">請輸入密碼</string>
   <string name="clear">清除</string>
